Bug 459153 - Layer Panel: Selection Highlighting only works on Layers with a Color Label
Summary: Layer Panel: Selection Highlighting only works on Layers with a Color Label
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 5.1.0
Platform: Compiled Sources All
: NOR minor
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-15 11:22 UTC by michaelknubben
Modified: 2022-09-16 11:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description michaelknubben 2022-09-15 11:22:30 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Create a number of layers
2. Give a few a Color Label
3. Move the cursor over your layers

OBSERVED RESULT
Notice that only the ones with a Color Label applied will highlight

EXPECTED RESULT
All layers should show a pre-selection highlight (or none, if there's a settings for this)

SOFTWARE/OS VERSIONS
Krita

 Version: 5.1.0
 Installation type: installer / portable package
 Hidpi: true

Qt

  Version (compiled): 5.12.12
  Version (loaded): 5.12.12

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.19043
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10

ADDITIONAL INFORMATION

Locale

  Languages: en_US
  C locale: C
  QLocale current: nl-BE
  QLocale system: nl-BE
  QTextCodec for locale: UTF-8
  Process ACP: 65001 (UTF-8)
  System locale default ACP: 1252  (ANSI - Latin I)
Comment 1 Halla Rempt 2022-09-15 11:24:30 UTC
Yes, I see this happen, but I'm not sure it's a bug, it might even have been intentional, to draw attention to the labeled layers specifically.
Comment 2 michaelknubben 2022-09-15 12:41:38 UTC
If you ask me, the color is meant to draw attention to that fact :D

I don't think this is consistent. Personally I'd prefer no highlighting at all, but either way: I don't see why it wouldn't apply to all layers equally.

I even switched themes to see if it was just a matter of the wrong colour being used for the non-labeled layers, but nope.
Comment 3 tomtomtomreportingin 2022-09-15 15:29:03 UTC
If this is going to go either way, I would prefer the color hover-highlight to not exist. Messes with text contrast a bit.
Comment 4 michaelknubben 2022-09-16 08:35:36 UTC
I agree, it's not needed, and there's no such highlighting elsewhere I can think of.
Comment 5 Halla Rempt 2022-09-16 08:39:27 UTC
Curiously, this seems to have been added in a commit that was supposed to only improve support for RTL:

commit 097d7e617aa260d467f86e65f8c6edfdd6124ea9
Author: Safa AlFulaij <safa1996alfulaij@gmail.com>, Tue Sep 18 16:55:21 2018 +0300 (4 years ago)
Committer: Safa AlFulaij <safa1996alfulaij@gmail.com>, Sun Jan 13 15:36:57 2019 +0300 (3 years, 8 months ago)
Follows: v4.2.0-prealpha
Precedes: 4.2.0-pre-alpha-HDR
Branches: <Expand>

Refactor KisNodeDelegate and support RTL
Comment 6 Halla Rempt 2022-09-16 08:55:35 UTC
Git commit 5943e6eaa652f2ec36f59c79a4f8accb47239ced by Halla Rempt.
Committed on 16/09/2022 at 08:54.
Pushed by rempt into branch 'master'.

Don't highlight a layer with a color label on mouse-over

This was added in

commit 097d7e617aa260d467f86e65f8c6edfdd6124ea9
Author: Safa AlFulaij <safa1996alfulaij@gmail.com>, Tue Sep 18 16:55:21 2018 +0300 (4 years ago)
Committer: Safa AlFulaij <safa1996alfulaij@gmail.com>, Sun Jan 13 15:36:57 2019 +0300 (3 years, 8 months ago)
Follows: v4.2.0-prealpha
Precedes: 4.2.0-pre-alpha-HDR
Branches: <Expand>

Refactor KisNodeDelegate and support RTL

Which wasn't meant to create visual changes to the node delegate,
only to fix RTL. This restores the old layer blending.

M  +1    -5    plugins/dockers/layerdocker/NodeDelegate.cpp

https://invent.kde.org/graphics/krita/commit/5943e6eaa652f2ec36f59c79a4f8accb47239ced
Comment 7 Halla Rempt 2022-09-16 08:56:02 UTC
Git commit 7fefaf5a5ecb9db1691eff724900797b08814d55 by Halla Rempt.
Committed on 16/09/2022 at 08:55.
Pushed by rempt into branch 'krita/5.1'.

Don't highlight a layer with a color label on mouse-over

This was added in

commit 097d7e617aa260d467f86e65f8c6edfdd6124ea9
Author: Safa AlFulaij <safa1996alfulaij@gmail.com>, Tue Sep 18 16:55:21 2018 +0300 (4 years ago)
Committer: Safa AlFulaij <safa1996alfulaij@gmail.com>, Sun Jan 13 15:36:57 2019 +0300 (3 years, 8 months ago)
Follows: v4.2.0-prealpha
Precedes: 4.2.0-pre-alpha-HDR
Branches: <Expand>

Refactor KisNodeDelegate and support RTL

Which wasn't meant to create visual changes to the node delegate,
only to fix RTL. This restores the old layer blending.
(cherry picked from commit 5943e6eaa652f2ec36f59c79a4f8accb47239ced)

M  +1    -5    plugins/dockers/layerdocker/NodeDelegate.cpp

https://invent.kde.org/graphics/krita/commit/7fefaf5a5ecb9db1691eff724900797b08814d55
Comment 8 michaelknubben 2022-09-16 11:54:10 UTC
Great, thanks for resolving this, Halla!