Don't highlight a layer with a color label on mouse-over

This was added in

commit 097d7e617aa260d467f86e65f8c6edfdd6124ea9
Author: Safa AlFulaij <safa1996alfulaij@gmail.com>, Tue Sep 18 16:55:21 2018 +0300 (4 years ago)
Committer: Safa AlFulaij <safa1996alfulaij@gmail.com>, Sun Jan 13 15:36:57 2019 +0300 (3 years, 8 months ago)
Follows: v4.2.0-prealpha
Precedes: 4.2.0-pre-alpha-HDR
Branches: <Expand>

Refactor KisNodeDelegate and support RTL

Which wasn't meant to create visual changes to the node delegate,
only to fix RTL. This restores the old layer blending.

BUG:459153